<resources>
    <string name="app_name">BaDa</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Lanjut</string>
    <string name="skip">Lewati</string>
    <string name="start">Mengerti</string>

    <string name="slide_1_title">Pelajari Bahasamu</string>
    <string name="slide_1_desc">Cara mudah belajar bahasa daerah dalam genggaman tanganmu.</string>

    <string name="slide_2_title">Tingkatkan Bahasamu</string>
    <string name="slide_2_desc">Pelajari dan kuasai bahasa daerah dengan menyelesaikan tiap jenjang.</string>

    <string name="slide_3_title">Taklukkan Tantangan</string>
    <string name="slide_3_desc">Selesaikan setiap pelajaran tanpa kehilangan hatimu.</string>

    <string name="slide_4_title">Dapatkan Reward</string>
    <string name="slide_4_desc">Tukarkan point dengan reward yang kamu inginkan.</string>

    <string name="app_full_name">Bahasa Daerah</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Butuh ijin</string>







    <string name="congratulation">Selamat !</string>
    <string name="get_point">Anda mendapatkan point 30xp</string>
    <string name="share_point">Sebarkan</string>

















</resources>
